--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
 
 .imgHead{
     width: 100vw;
-    height: 8cm;
+    height: 35vh;
     opacity: 70%;
 }
 
@@ -294,6 +294,78 @@
 
   .vid{
     margin-top: 2cm;
-    margin-left: 15%;
+
     margin-bottom: 10%;
+  }
+
+  .responsive{
+    display: none;
+  }
+
+  @media only screen and (max-width: 826px){
+    .subMenu{
+    
+      display: none;
+    }
+    .centrado{
+      display: none;
+      position: absolute;
+      top: 95%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 0.8cm;
+      width: 20cm;
+      height: 5cm;
+    
+  }
+  .vid{
+    margin-top: 2cm;
+    margin-left: 0px;
+    margin-bottom: 10%;
+  }
+  .responsive{
+    display: block;
+    margin-top: 1%;
+  }
+  .container{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .logo{
+    margin-top: 2cm;
+  }
+
+  .imgHead{
+    width: 100vw;
+    height: auto;
+    opacity: 70%;
+  }
+
+ 
+
+  }
+
+  @media only screen and (max-width: 1200px) {
+    .container{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .vid{
+      margin-top: 2cm;
+      margin-left: 0px;
+      margin-bottom: 10%;
+    }
+    .logo{
+      margin-top: 3cm;
+    }
+  }
+
+  @media only screen and (max-width: 990px){
+    .subMenu{
+    
+      display: none;
+    }
+    
   }
